add sonos search
